--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <script>
 async function init()  {
+const headers = {'Content-Type':'application/json',
+                    'Access-Control-Allow-Origin':'*',
+                    'Access-Control-Allow-Methods':'POST,PATCH,OPTIONS'}
 let req = await fetch("https://yearbookavenue.jostens.com/imagelibraryservices/imagelibrary/saveimagedetail?x=1727305814760", {
 method: "POST",
-body: JSON.stringify({id: 2434076249, description: "hello", indexFlag: true, imageFlowCode: "USE_PHOTO"}),
-headers: {
-      'Accept': 'application/json',
-      'Content-Type': 'application/json'
-    },
+body: JSON.stringify({id: 2434076249, description: "yes!!", indexFlag: true, imageFlowCode: "USE_PHOTO"}),
+headers: headers
 })
 let body = await req.json()
 console.log(body)
